# AI-Takeover

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  TODO_LIST.txt  UML.drawio
.github/workflows/: blank.yml
Files/: .config  Level_0.txt  Level_1.txt  Level_2.txt  Level_3.txt  Level_4.txt  Level_5.txt  results.txt
Game/: CMakeLists.txt
Game/include/: Background.h  Button.h  ChooseLevelMenuScene.h  Constants.h  Game.h  GameplayScene.h  Gui.h  MainMenuScene.h  PauseScene.h  Scene.h  SceneManager.h  SceneSwitcher.h  SceneType.h
Game/src/: Background.cpp  Button.cpp  ChooseLevelMenuScene.cpp  Constants.cpp  Game.cpp  GameplayScene.cpp  Gui.cpp  MainMenuScene.cpp  PauseScene.cpp  SceneManager.cpp
Level/: CMakeLists.txt
Level/include/: Camera.h  Hero.h  Level.h  Map.h
Level/src/: Finish.cpp  Hero.cpp  Level.cpp  Map.cpp
include/: Background.h  Button.h  Camera.h  ChooseLevelMenuScene.h  Constants.h  Finish.h  Game.h  GameplayScene.h  Gui.h  Hero.h  Level.h  MainMenuScene.h  Map.h  PauseScene.h  Platform.h  Scene.h  SceneManager.h
src/: Background.cpp  Button.cpp  ChooseLevelMenuScene.cpp  Constants.cpp  Finish.cpp  Game.cpp  GameplayScene.cpp  Gui.cpp  Hero.cpp  Level.cpp  MainMenuScene.cpp  Map.cpp  PauseScene.cpp  SceneManager.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
